# incolumepy.prospect.translate-python-gnu-gettext

./: Makefile  README.md  README.rst  main.py  pyproject.toml
incolumepy_prospect_translate_python_gnu_gettext/: __init__.py  version.txt
locales/el/LC_MESSAGES/: base.po
locales/en/LC_MESSAGES/: base.po
tests/: test_incolumepy_prospect_translate_python_gnu_gettext.py
