[tool.poetry]
name = "incolumepy.prospect.translate-python-gnu-gettext"
version = "0.1.1-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8"
toml = {extras = ["tomli"], version = "^0.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
